--- a/project/myCrossing/src/app/cat-peces/cat-peces.component.html
+++ b/project/myCrossing/src/app/cat-peces/cat-peces.component.html
@@ -4,7 +4,7 @@
 <div class="content-wrapper-top">
     <div style="margin-top: 4vw;position:relative">
         <div class="burbuja-title">
-          <h1>Catálogo de Peces</h1>
+          <h1>Catálogo de peces</h1>
         </div>
         <div id="wrap-filtros" class="flex-centered" style="align-items: unset;">
             <div style="width: 35%;" class="flex-column-centered">
