--- a/project/myCrossing/src/app/cat-ropa/cat-ropa.component.css
+++ b/project/myCrossing/src/app/cat-ropa/cat-ropa.component.css
@@ -17,6 +17,7 @@ h2, span{
 .pag-menu{
   width: 100%;
   position: relative;
+  margin-top: 1vw;
 }
 
 .grid-w-gap{
@@ -27,6 +28,7 @@ h2, span{
   background-color: #fdd2f4;
   position: relative;
   box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+  transition: 0.3s;
 }
 
 .editar{
@@ -40,10 +42,13 @@ h2, span{
   padding: 0;
   border: none;
   cursor: pointer;
+  transition: 0.3s;
 }
 
 .b-darkGreen{
   background-color: rgb(157 228 163);
+  transform: scale(1.1);
+  font-weight: bold;
 }
 
 .b-darkBlue{
@@ -51,11 +56,54 @@ h2, span{
 }
 
 .b-darkPink{
-  background-color: rgb(228 157 203);
+  background-color: #f59dc6;
 }
 
 .b-darkPurple{
-  background-color: #c380ec;
+  background-color: #ec819a;
+}
+
+.b-variacion:hover img{
+  transform: scale(1.1);
+}
+
+.b-variacion img{
+  transition: 0.3s;
+}
+
+.b-variacion:hover{
+  background-color: #ec819a;
+}
+
+.grid-item-wrap ::-webkit-scrollbar {
+  height: 12px;
+  transition: 0.3s;
+  padding: 3px 0;
+  background-color: #c37c99;
+  border-radius: 20px;
+}
+
+.grid-item-wrap ::-webkit-scrollbar-thumb {
+  background: #f59dc6;
+  border-radius: 20px;
+  transition: 0.3s;
+}
+
+.grid-item-wrap ::-webkit-scrollbar-thumb:hover {
+  background-color: #ec819a;
+}
+
+.variMenu > button{
+  margin-bottom: 0.3rem;
+}
+
+#wrap-filtros{
+  padding-bottom: 1vw;
+  display:flex;
+  margin: auto;
+  background-color: #fdd2f4;
+  border-radius: 50px;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
 }
 
 .boton-circular{
@@ -76,10 +124,27 @@ h2, span{
 }
 
 .bg-scroll-1{
-  background-image: url("../../assets/images/bg-0.svg");
+  background-image: url("../../assets/images/ropa-bg-0.svg");
 }
 
 
 .bg-scroll-2{
-  background-image: url("../../assets/images/bg-1.svg");
+  background-image: url("../../assets/images/ropa-bg-1.svg");
 }
+
+.no-result{
+  background-color: #fdd2f4;
+  border-radius: 50px;
+  position:relative;
+  margin: 3% 0;
+  box-shadow: 0px 0px 15px -5px rgb(23 23 23 / 55%);
+}
+
+.burbuja-title{
+  background-image: url("../../assets/images/bubble-ropa.png");
+}
+
+:host{
+  background-color: #d892c9;
+}
+
