--- a/project/myCrossing/src/app/calc-nabos/calc-nabos.component.css
+++ b/project/myCrossing/src/app/calc-nabos/calc-nabos.component.css
@@ -81,8 +81,13 @@
   border-style: solid;
   border-width: 0.3vw;
   border-radius: 50px;
-  padding: 8px 16px;
+  padding: 2px 10px;
   margin: 1%;
+  transition: 0.3s;
+}
+
+.input__radio-buttons label{
+  font-weight: unset;
 }
 
 .input__radio-buttons input[type="radio"]:not(:checked)+label:hover {
@@ -94,6 +99,8 @@
 .input__radio-buttons input[type="radio"]:checked+label {
   background-color: rgb(203, 244, 196);
   border-color: rgb(149, 229, 155);
+  transform: scale(1.1);
+  font-weight: bold !important;
 }
 
 .form__row {
@@ -253,9 +260,9 @@ input[type=number] {
   border-style: solid;
   border-width: 0.3vw;
   border-radius: 50px;
-  padding: 8px 16px;
-  font-weight: bold;
+  padding: 2px 10px;
   font-size: 1.2rem;
+  transition: 0.3s;
 }
 
 h1 {
@@ -270,14 +277,37 @@ h1 {
   width: 25vw;
 }
 
-.patron-tag p {
-  font-size: 90%;
+.patron-tag:hover h2{
+  padding-bottom: 7rem;
 }
 
 .patron-tag{
   margin: 1vw 0;
   border-radius: 20px;
   overflow: hidden;
+  transition: 0.3s;
+  box-shadow: 0 0 20px;
+}
+
+.patron-tag p {
+  opacity: 0;
+  position: relative;
+  margin-top: 4rem;
+}
+
+.patron-tag h2{
+  position: absolute;
+  transition: 0.3s;
+}
+
+.pShow{
+  transition: 0.3s;
+  opacity: 1 !important;
+}
+
+.pHide{
+  transition: 0.3s;
+  opacity: 0 !important;
 }
 
 .patron-tag > div{
@@ -299,6 +329,7 @@ h1 {
   background-color: var(--blanco);
   border-radius: 50px;
   padding: 3%;
+  box-shadow: 0 0 20px;
 }
 
 .info-wrap{
@@ -309,4 +340,8 @@ h1 {
 
 label{
   font-size: unset;
+}
+
+.burbuja-title{
+  background-image: url("../../assets/images/bubble-nabo.png");
 }
