Perfil - Tareas done

--- a/project/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
+++ b/project/myCrossing/src/app/perfil/tareas/tarea-menu/tarea-menu.component.html
@@ -11,8 +11,8 @@
       </div>
       <br />
       <div style="display: flex; justify-content: space-between;">
-        <button [disabled]="iconoForm.invalid" type="submit" class="boton-alargado b-azul">Actualizar</button>
-        <button (click)="borrarTarea(tarea)" class="boton-imagen delete"></button>
+        <button [disabled]="iconoForm.invalid" type="submit" class="boton-alargado b-azul-hover b-scale">Actualizar</button>
+        <button (click)="borrarTarea(tarea)" class="boton-imagen delete b-scale"></button>
       </div>
     </form>
   </div>
