--- a/project/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
+++ b/project/myCrossing/src/app/perfil/visitasemanal/visitasemanal.component.html
@@ -1,5 +1,5 @@
 <div class="visitasContainer">
-    <div class="panel flex" style="width: 50%;" [style.visibility]="hide ? 'hidden': 'visible'" (clickOutside)="cierraMenu()">
+    <div class="panel flex" style="width: 50%;" [style.display]="hide ? 'none': 'block'" (clickOutside)="cierraMenu()">
         <div id="menu-wrap" class="flex-centered" style="flex-wrap: wrap;flex-basis: 25vw;">
           <div class="flex-column-centered" [style.opacity]="alcatifa ? '1': '0.4'">
             <button (click)="agrega('Alcatifa', alcatifa)" [class]="alcatifa ? 'boton-imagen boton-hover' : 'boton-imagen no-point'" style="background-image: url('../../../assets/images/alcatifa.png');"></button>
@@ -37,7 +37,7 @@
             <button (click)="agrega('Ladino', ladino)" [class]="ladino ? 'boton-imagen boton-hover' : 'boton-imagen no-point'" style="background-image: url('../../../assets/images/ladino.png');"></button>
             <span>Ladino</span>
           </div>
-          <button class="boton-imagen delete" style="border-radius: 0px;width: 3vw;height: 3vw;margin: 1vw 2vw" (click)="agrega('', true)"></button>
+          <button class="boton-imagen delete b-scale" style="border-radius: 0px;margin: 1vw 2vw" (click)="agrega('', true)"></button>
         </div>
     </div>
     <div class="notificacion" [style.visibility]="avisando ? 'visible': 'hidden'">{{aviso}}</div>
@@ -54,12 +54,12 @@
         <div (click)="vacio($event,'lpr')" class="visita first">
             <ng-container *ngIf="isEmpty(lpr)">
                 <div>
-                    <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                    <button class="b-bold boton-circular b-amarillo b-scale">+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(lpr)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{lpr | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{lpr | lowercase}}.png">
                     {{lpr | titlecase}}
                 </div>
             </ng-container>
@@ -67,12 +67,12 @@
         <div (click)="vacio($event,'mpr')" class="visita">
             <ng-container *ngIf="isEmpty(mpr)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(mpr)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{mpr | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{mpr | lowercase}}.png">
                     {{mpr | titlecase}}
                 </div>
             </ng-container>
@@ -80,12 +80,12 @@
         <div (click)="vacio($event,'xpr')" class="visita">
             <ng-container *ngIf="isEmpty(xpr)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(xpr)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{xpr | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{xpr | lowercase}}.png">
                     {{xpr | titlecase}}
                 </div>
             </ng-container>
@@ -93,12 +93,12 @@
         <div (click)="vacio($event,'jpr')" class="visita">
             <ng-container *ngIf="isEmpty(jpr)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(jpr)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{jpr | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{jpr | lowercase}}.png">
                     {{jpr | titlecase}}
                 </div>
             </ng-container>
@@ -106,12 +106,12 @@
         <div (click)="vacio($event,'vpr')" class="visita">
             <ng-container *ngIf="isEmpty(vpr)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(vpr)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{vpr | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{vpr | lowercase}}.png">
                     {{vpr | titlecase}}
                 </div>
             </ng-container>
@@ -134,12 +134,12 @@
         <div (click)="vacio($event,'lpa')" class="visita first">
             <ng-container *ngIf="isEmpty(lpa)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(lpa)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{lpa | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{lpa | lowercase}}.png">
                     {{lpa | titlecase}}
                 </div>
             </ng-container>
@@ -147,12 +147,12 @@
         <div (click)="vacio($event,'mpa')" class="visita">
             <ng-container *ngIf="isEmpty(mpa)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(mpa)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{mpa | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{mpa | lowercase}}.png">
                     {{mpa | titlecase}}
                 </div>
             </ng-container>
@@ -160,12 +160,12 @@
         <div (click)="vacio($event,'xpa')" class="visita">
             <ng-container *ngIf="isEmpty(xpa)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(xpa)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{xpa | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{xpa | lowercase}}.png">
                     {{xpa | titlecase}}
                 </div>
             </ng-container>
@@ -173,12 +173,12 @@
         <div (click)="vacio($event,'jpa')" class="visita">
             <ng-container *ngIf="isEmpty(jpa)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(jpa)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{jpa | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{jpa | lowercase}}.png">
                     {{jpa | titlecase}}
                 </div>
             </ng-container>
@@ -186,12 +186,12 @@
         <div (click)="vacio($event,'vpa')" class="visita">
             <ng-container *ngIf="isEmpty(vpa)">
                 <div>
-                  <button class="b-bold boton-circular b-amarillo" style="width: 3vw; height: 3vw;">+</button>
+                  <button class="b-bold boton-circular b-amarillo b-scale" >+</button>
                 </div>
             </ng-container>
             <ng-container *ngIf="!isEmpty(vpa)">
                 <div class="elemento">
-                    <img class="image" src="../../../assets/images/{{vpa | lowercase}}.png">
+                    <img class="image b-scale" src="../../../assets/images/{{vpa | lowercase}}.png">
                     {{vpa | titlecase}}
                 </div>
             </ng-container>
@@ -212,10 +212,10 @@
     <div class="flex-centered div-botones">
       <div class="estela-container">
         <img [src]="estela ? '../../../assets/images/estela.png' : '../../../assets/images/estela-gris.png'" style="width: 3vw; height: 3vw;margin-right:1vw">
-        <button class="estelaButton boton-alargado" [style.border-color]="estela ? '#95E59B' : '#ade6e7' " [style.background-color]="estela ? '#CBF4C4' : '#d9f6f6' " (click)="cambiarEstela()">
+        <button class="estelaButton boton-alargado b-scale" [class]="estela ? 'b-verde' : 'b-azul-hover'" (click)="cambiarEstela()">
           {{estela ? "Estela ya te ha visitado esta semana" : "Estela aún no te ha visitado"}}
         </button>
       </div>
-      <button class="boton-imagen save" style="margin-bottom: 1vw;width: 2vw;height: 2vw;border-radius: 0px;" (click)="guardar()"></button>
+      <button class="boton-imagen save" style="margin-bottom: 1vw;width: 3vw;height: 3vw;border-radius: 100%;" (click)="guardar()"></button>
     </div>
 </div>
