--- a/project/myCrossing/src/app/perfil/perfil.component.html
+++ b/project/myCrossing/src/app/perfil/perfil.component.html
@@ -1,6 +1,6 @@
 <div class="user_info">
   <div id="perfil" class="wrapper-perfil">
-    <button class="editar boton-imagen editar-azul" (click)="!modoEdicion ? toggleEdicion() : enviar(userForm.value)" #botonEdit ></button>
+    <button class="editar boton-imagen" [class]="modoEdicion ? 'check-verde' : 'b-scale-xl editar-azul'" (click)="!modoEdicion ? toggleEdicion() : enviar(userForm.value)" #botonEdit ></button>
     <div [hidden]="modoEdicion" >
       <div id="primary" class="flex-column-centered">
         <h2>{{this.usuario.nombre | capitalize}}</h2>
@@ -26,8 +26,6 @@
           </div>
           <hr>
           <span><b>ID Switch: </b>{{this.usuario.id_switch}}</span>
-          <hr>
-          <span><b>ID Sueño: </b>{{this.usuario.id_suenyo}}</span>
         </div>
       </div>
     </div>
@@ -36,43 +34,49 @@
       <form [formGroup]="userForm">
         <div id="primary">
           <div id="nombre" class="flex-column-centered">
-            <input class="input-resized" formControlName="nombre" type="text">
+            <input class="input-resized text-input" formControlName="nombre" type="text">
             <div *ngIf="userForm.hasError('blank')">El nombre no puede estar vacío</div>
-            <input class="input-resized" formControlName="apodo_aldeano" type="text" placeholder="Apodo">
+            <input class="input-resized text-input" formControlName="apodo_aldeano" type="text" placeholder="Apodo">
             <hr class="passport-hr">
           </div>
         </div>
         <div class="bckg" #fondoEdit>
           <div id="secondary">
             <div id="flex" style="display: block;">
-              <div class="v-center">
-                <input class="input-resized" formControlName="isla" type="text">
-                <input formControlName="hemisferio" type="radio" value="NORTE">
-                <img src="../../assets/images/hemisferio-norte.png" class="icono" #hemisferio>
-                <input formControlName="hemisferio" type="radio" value="SUR">
-                <img src="../../assets/images/hemisferio-sur.png" class="icono" #hemisferio>
+              <div class="v-center" style="justify-content: space-between;">
+                <input class="input-resized text-input" formControlName="isla" type="text">
+
+                <div style="width: fit-content">
+                  <input formControlName="hemisferio" class="radio-hidden" type="radio" value="NORTE">
+                  <img src="../../assets/images/hemisferio-norte.png" (click)="userForm.value['hemisferio'] = 'NORTE'" [class]="userForm.value['hemisferio'] == 'NORTE' ? 'img-radio img-radio-checked' : 'img-radio'" #hemisferio>
+                  <input formControlName="hemisferio" class="radio-hidden" type="radio" value="SUR">
+                  <img src="../../assets/images/hemisferio-sur.png" (click)="userForm.value['hemisferio'] = 'SUR'" [class]="userForm.value['hemisferio'] == 'SUR' ? 'img-radio img-radio-checked' : 'img-radio'" #hemisferio>
+                </div>
+
               </div>
               <br>
-              <div class="v-center">
-                <input formControlName="fruta" type="radio" value="NARANJA">
-                <img src="../../assets/images/naranja.png" class="icono">
-                <input formControlName="fruta" type="radio" value="MANZANA">
-                <img src="../../assets/images/manzana.png" class="icono">
-                <input formControlName="fruta" type="radio" value="PERA">
-                <img src="../../assets/images/pera.png" class="icono">
-                <input formControlName="fruta" type="radio" value="MELOCOTON">
-                <img src="../../assets/images/melocoton.png" class="icono">
-                <input formControlName="fruta" type="radio" value="CEREZA">
-                <img src="../../assets/images/cereza.png" class="icono">
+              <div class="v-center" style="justify-content: space-between;">
+                <input formControlName="fruta" class="radio-hidden" type="radio" value="NARANJA">
+                <img src="../../assets/images/naranja.png" (click)="userForm.value['fruta'] = 'NARANJA'" [class]="userForm.value['fruta'] == 'NARANJA' ? 'img-radio img-radio-checked' : 'img-radio'">
+                <input formControlName="fruta" class="radio-hidden" type="radio" value="MANZANA">
+                <img src="../../assets/images/manzana.png" (click)="userForm.value['fruta'] = 'MANZANA'" [class]="userForm.value['fruta'] == 'MANZANA' ? 'img-radio img-radio-checked' : 'img-radio'">
+                <input formControlName="fruta" class="radio-hidden" type="radio" value="PERA">
+                <img src="../../assets/images/pera.png" (click)="userForm.value['fruta'] = 'PERA'" [class]="userForm.value['fruta'] == 'PERA' ? 'img-radio img-radio-checked' : 'img-radio'">
+                <input formControlName="fruta" class="radio-hidden" type="radio" value="MELOCOTON">
+                <img src="../../assets/images/melocoton.png" (click)="userForm.value['fruta'] = 'MELOCOTON'" [class]="userForm.value['fruta'] == 'MELOCOTON' ? 'img-radio img-radio-checked' : 'img-radio'">
+                <input formControlName="fruta" class="radio-hidden" type="radio" value="CEREZA">
+                <img src="../../assets/images/cereza.png" (click)="userForm.value['fruta'] = 'CEREZA'" [class]="userForm.value['fruta'] == 'CEREZA' ? 'img-radio img-radio-checked' : 'img-radio'">
               </div>
             </div>
             <hr>
-            <div class="v-center">
-              <input class="input-resized" formControlName="cumpleanyos" type="date">
+            <div class="v-center" style="justify-content: center;">
+              <input class="input-resized text-input" formControlName="cumpleanyos" type="date">
             </div>
             <hr>
-            <input class="input-resized" formControlName="id_switch" type="text" placeholder="SW-1234-5678-9012">
-            <hr>
+            <div class="v-center" style="justify-content: center;">
+              <input class="input-resized text-input" formControlName="id_switch" type="text" placeholder="SW-1234-5678-9012">
+            </div>
+            <!-- BORRAR ESTE INPUT -->
             <input class="input-resized" formControlName="id_suenyo" type="text" placeholder="DA-1234-5678-9012">
           </div>
         </div>
