--- a/project/myCrossing/src/styles.css
+++ b/project/myCrossing/src/styles.css
@@ -319,7 +319,7 @@ label{
   border-radius: 20px;
   border-style: none;
   padding: 0.5vw 1vw;
-  box-shadow: inset 0 0 8px rgb(0 0 0 / 42%); /*0px 0px 10px 1px rgb(23 23 23 / 20%);*/
+  box-shadow: inset 0 0 8px rgb(0 0 0 / 42%);
   width: 100%;
 }
 
